# polyfacts

./: .codex-scratchpad.md  .gitignore  CLAUDE.md  README-DEPLOY.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  promote_admin.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 157e5be2c55b_merge_comments_and_view_count.py  4142f2fa3f68_add_thumbnail_media_type.py  48dbe3f7d852_initial_schema.py  a1b2c3d4e5f6_add_users_and_features.py  b2c3d4e5f6g7_add_comments.py  c6f4d8e9b1a2_add_view_count.py  d3e4f5g6h7i8_add_claim_reactions.py  e4f5g6h7i8j9_add_session_description.py
backend/app/: auth.py  config.py  main.py  worker.py
backend/app/models/: __init__.py  base.py  claim.py  comment.py  session.py  user.py
backend/app/routes/: auth.py  claims.py  clips.py  comments.py  media.py  search.py  sessions.py  user_features.py
backend/app/schemas/: claim.py  session.py
backend/app/services/: asr_pipeline.py  claim_detector.py  evidence_retriever.py  pipeline.py  verdict_engine.py
backend/scripts/: seed_demo.py
backend/tests/: test_claim_detector.py
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: ClaimCard.tsx  ClipUploader.tsx  CommentsSection.tsx  NavBar.tsx  SessionCard.tsx  SessionView.tsx  SourcesPanel.tsx  Timeline.tsx  VideoPlayer.tsx
frontend/src/context/: AuthContext.tsx
ml/: README.md
(+2 files in other folders)
