[project]
name = "polyfacts"
version = "0.1.0"
description = "Political literacy fact-check overlay"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.18",
    "arq>=0.26.1",
    "redis>=5.2.0",
    "structlog>=24.4.0",
    "anthropic>=0.39.0",
    "openai>=1.57.0",
    "transformers>=4.47.0",
    "torch>=2.5.0",
    "deepgram-sdk>=3.8.0",
    "sentry-sdk[fastapi]>=2.19.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "yt-dlp>=2024.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.34.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
